  Emails missing text/plain parts but with text/html parts can be
  converted into text. If this is done the email will no longer be
  bounced back to the sender with an error. Enable by configuring the
  convert_htmltotext option in your upgraded config.ini. (Initial
  patch by Igor Ippolitov merged with changes by John Rouillard.)

Fixed:

- issue1615201: Optionally restore the original (version 0.6) mailgw 
  behaviour of ignoring a Resent-From:-header and using the real 
  From-header instead: new configuration option EMAIL_KEEP_REAL_FROM 
  (Peter Funk aka Pefu).
- issue2550717: Changed a couple of residual email references into
  E-Mail in German translation (John Rouillard)
- issue2550669: Adding documentation for csv_field_size to the
  customizing tracker section of doc/customizing.txt (John Rouillard)
- issue2550601: gsoc-2009 "bug" class doesn't have "patches" property
  Added multilink to patches to the bug schema in the devel template.
  (applied by John Rouillard)
- issue2550748: Crash when creating new issues with non-existing
  multilink values (in classic template). Applied patch so it
  now errors the same way as an update does. (applied by John Rouillard)
- issue2550757: one bug raised by issue fixed. Patch created by
  W. Trevor King (wking) for documentation of mailgw applied by 
  John Rouillard.
- Fix processing of additional arguments to cgi method 'menu': This
  would not work if more than one additional argument is used.
  (Ralf Schlatterbeck)
- Update documentation of some existing property attributes (like
  'do_journal' for Link/Multilink properties), this also adds missing
  documentation for issue1444214. (Ralf Schlatterbeck)
- issue2550763 Strip whitespace from Multilink values after + or -.
  (W. Trevor King) Test heavily modified by John Rouillard. (applied
  by John Rouillard)
- issue2550907 Fix errors when creating documentation. Work done by
  Peter Funk (pefu). (Applied by John Rouillard with small change